<resources>
    <string name="app_name">GreenPlant</string>
    <string name="version">Copyright@ %1$d meaning</string>
    <string name="service_title">服务条款和隐私协议显示</string>
    <string name="service_content">
        <Data><![CDATA[
        <p>&nbsp;&nbsp;&nbsp;&nbsp;本应用尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。</p>
        <p>1. 适用范围</p>
        <p>在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
        <p>您了解并同意，以下信息不适用本隐私权政策：</p>
        <p>(a) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；</p>
        <p>(b) 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。</p>
        <p>2. 信息使用</p>
        <p>(a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。</p>
        <p>(b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。</p>
        <p>3. 信息披露</p>
        <p>在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：</p>
        <p>(a) 经您事先同意，向第三方披露；</p>
        <p>(b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；</p>
        <p>(c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；</p>
        <p>(d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；</p>
        <p>(e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；</p>
        <p>(f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。</p>
        <p>(g) 其它本应用根据法律、法规或者网站政策认为合适的披露。</p>
        <p>4. 信息存储和交换</p>
        <p>本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。</p>
        <p>5. Cookie的使用</p>
        <p>(a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。本应用使用cookies可为您提供更加周到的个性化服务，包括推广服务。</p>
        <p>(b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。</p>
        <p>(c) 通过本应用所设cookies所取得的有关信息，将适用本政策。</p>
        <p>6. 信息安全</p>
        <p>(a) 本应用帐号均有安全保护功能，请妥善保管您的用户名及密码信息。本应用将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。</p>
        <p>(b) 在使用本应用网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对</p>
        <p>7.本隐私政策的更改</p>
        <p>(a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。</p>
        <p>(b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。</p>
        <p>请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。</p>
        <p>&nbsp;&nbsp;&nbsp;&nbsp;欢迎您使用软件及服务，以下内容请仔细阅读。</p>
        <p>1、保护用户个人信息是一项基本原则，我们将会采取合理的措施保护用户的个人信息。除法律法规规定的情形外，未经用户许可我们不会向第三方公开、透漏个人信息。APP对相关信息采用专业加密存储与传输方式，保障用户个人信息安全，如果您选择同意使用APP软件， 即表示您认可并接受APP服务条款及其可能随时更新的内容。</p>
        <p>2、我们将会使用您的以下功能：麦克风、喇叭、WIFI网络、蜂窝通信网络、手机基站数据、SD卡、短信控制、通话权限、蓝牙管理，如果您禁止APP使用以上相关服务和功能，您将自行承担不能获得或享用APP相应服务的后果。</p>
        <p>3、为了提供更好的客户服务，基于技术必要性收集一些有关设备级别事件（例如崩溃）的信息，但这些信息并不能够让我们识别您的 身份。为了能够让APP定位服务更精确，可能会收集并处理有关您实际所在位置信息（例如移动设备发送的GPS信号），WI-FI接入点和 基站位置信息。我们将对上述信息实施技术保护措施，以最大程度保护这些信息不被第三方非法获得，同时，您可以自行选择拒绝我们基于技术必要性 收集的这些信息，并自行承担不能获得或享用APP相应服务的后果。</p>
        <p>4、在您使用我们的产品或服务的过程中，我们可能：需要您提供个人信息，如姓名、电子邮件地址、电话号码、联系地址等以及注册或申请服务时需要 的其它类似个人信息；您对我们的产品和服务使用即表明您同意我们对这些信息的收集和合理使用。您可以自行选择拒绝、放弃使用相关产品或服务。</p>
        <p>5、由于您的自身行为或不可抗力等情形，导致上述可能涉及您隐私或您认为是私人信息的内容发生被泄露、批漏，或被第三方获取、使用、转让等情形的，均由您自行承担不利后果，我们对此不承担任何责任。</p>
        <p>6、我们拥有对上述条款的最终解释权。</p>
        <a href="www.baidu.com">www.baidu.com</a>
        ]]></Data>
    </string>
    <string name="agree">同意</string>
    <string name="disagree">不同意并退出应用</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_for_phone">请输入手机号:</string>
    <string name="login_for_password">请输入密码:</string>
    <string name="register_for_password">请输入该账号设置的密码:</string>
    <string name="forget_for_new_password">请输入新密码:</string>
    <string name="register_for_username">请输入用户名:</string>
    <string name="welcome_login">欢迎登录绿植</string>
    <string name="welcome_register">欢迎注册绿植</string>
    <string name="forget_password">忘记密码</string>
    <string name="to_register">还没有账号，点此注册</string>
    <string name="back_to_login">返回登录</string>
    <string name="code">请输入验证码:</string>
    <string name="get_code">获取验证码</string>
    <string name="home">首页</string>
    <string name="shequ">社区</string>
    <string name="weather">天气</string>
    <string name="me">我的</string>
    <string name="logo_title">绿植</string>
    <string name="find_nature_beautify">发现自然之美</string>
    <string name="discover_every_greener">识别每一片绿意</string>
    <string name="get_to_know_plant">拍照识别</string>
    <string name="docker">植物医生</string>
    <string name="AI_paint">图片识别</string>
    <string name="plant_baike">植物百科</string>
    <string name="change_plant">换一换</string>
    <string name="in_short">简要介绍</string>
    <string name="care_knowledge">养护知识</string>
    <string name="area">分布地区</string>
    <string name="plant_culture">植物文化</string>
    <string name="legend">传说故事</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="legend_content">传说中紫罗兰花是“爱情花”，据希腊神话传说故事，管理人们爱与美丽的女神维纳斯，因恋人出远门，依依不舍，晶莹剔透的泪水滴到土壤上，第二年春季居然生出枝芽，结出了一朵朵美丽的花朵来，这就是紫罗兰。
</string>
    <string name="plant_culture_content">紫罗兰在古希腊是富饶多产的象征，雅典以它作为徽章旗帜上的标记， [10]是美国罗得岛州的州花， [11]花语是“永恒的美与爱”。 [12]
紫罗兰的花语：永恒的美与爱；质朴，美德，盛夏的清凉。
紫罗兰（蓝色）：警戒，忠诚，我将永远忠诚。
紫罗兰（白色）：让我们抓住幸福的机会吧。
紫罗兰（紫色）：在梦境中爱上你，对我而言你永远那么美。
同时，紫罗兰也是金牛座的幸运花。 [5]
紫罗兰象征：高雅、诚实。 [6]</string>
    <string name="area_content">本属约50种，中国有1种。 [17]原产欧洲南部及地中海沿岸。中国南方大城市中常有引种，北方栽于庭园花坛或温室中。</string>
    <string name="care_knowledge_content">1、土壤：最好用松软、透气、肥沃的土壤。2、光照：平时多晒散光，夏季光照强，必须遮挡处理。3、浇水：生长季勤浇水，保湿在60%-80%之间。4、施肥：生长季间勤追施稀释的复合肥液，确保营养足才可更好的开花。5、温度：养护在15-25℃的环境下，夏冬季适当控温。6、注意事项：它有毒，注意摆放位置。</string>
    <string name="introduction">紫罗兰（Matthiola incana (L.) R. Br.）是十字花科、紫罗兰属二年生或多年生草本植物，其植株高60厘米，布满灰白色的分枝柔毛；茎直立，多分枝；叶片为长圆形至倒披针形或匙形；总状花序顶生和腋生，花多数，较大，花序轴果期伸长，花瓣为类似卵形的紫红、淡红或白色， [7]花朵具有芳香、艳丽，花色丰富； [8]种子为深褐色扁平近圆形状，直径约2毫米；花期4-5月</string>

    <string name="no_message">还没有该种植物的信息哦</string>
    <string name="loading">加载中...</string>
    <string name="send">发送</string>
    <string name="tryComment">我也来评论</string>
    <string name="nowFelling">此刻的心情</string>
    <string name="publish">发布</string>
    <string name="textDongTai">文本动态</string>
    <string name="imageDongTai">图片动态</string>
    <string name="videoDongTai">视频动态</string>
    <string name="plantName">请输入植物名称</string>
    <string name="divide_weather_and_aqi">|</string>
    <string name="aqi_text">空气指数</string>
    <string name="notice">预告</string>
    <string name="life_index">生活指数</string>
    <string name="cold_risk">感冒</string>
    <string name="dress">穿衣</string>
    <string name="ultraviolet">实时紫外线</string>
    <string name="car_washing">洗车</string>
    <string name="plantRecommend">绿荫推荐</string>
    <string name="self_introduction">用户简介：</string>
    <string name="plant_note">植物笔记清单</string>
    <string name="all_note">全部笔记</string>
    <string name="new_note">新建</string>
    <string name="delete">删除</string>
    <string name="replace_dongtai_background">重新选择动态背景图</string>
    <string name="avatar">头像</string>
    <string name="name">名称</string>
    <string name="introduce">用户简介</string>
    <string name="changePhoneNumber">修改手机号</string>
    <string name="change_password">修改密码</string>
    <string name="delete_phone">注销账号</string>
    <string name="logout">退出登录</string>
    <string name="input_your_name">请输入您的新昵称</string>
    <string name="username_advice">一个好的昵称可以帮助大家更好的记住您</string>
    <string name="username_advice2">(设置的用户名必须为1~10位)</string>
    <string name="input_your_introduce">展示你的独特魅力，快来设置你的个性简介吧！</string>
    <string name="phone_title">手机号：</string>
    <string name="input_new_phone">请输入新的手机号</string>
    <string name="code_title">验证码:</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code_for_new_phone">获取验证码</string>
    <string name="confirm">修改</string>
    <string name="new_password">新密码:</string>
    <string name="hand_in_new_password">请输入新的密码</string>
    <string name="confirm_password">确认密码:</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="question">请输入您要询问的问题</string>
    <string name="selectTag">请选择标签</string>
    <string name="function_feed_back">功能反馈</string>
    <string name="ui">界面设计</string>
    <string name="performance_issues">性能问题</string>
    <string name="safe">安全问题</string>
    <string name="experience">用户体验</string>
    <string name="advice">建议与意见</string>
    <string name="other">其他问题</string>
    <string name="detail_content_title">具体建议内容</string>
    <string name="hint_content">在这里输入内容</string>
    <string name="limit_application_edit">/200</string>
</resources>