<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:context=".component.me.SendApplicationBugActivity">
    <com.example.greenplant.TitleLayout
        android:id="@+id/titleLayout"
        android:fitsSystemWindows="true"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:padding="@dimen/content_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:background="@drawable/application_bug_view_background"
                android:layout_width="3dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/dialog_margin"
                android:text="@string/selectTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:layout_marginTop="@dimen/dialog_margin"
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="false"
            app:singleSelection="true"> <!-- 如果需要单选，则添加这个属性 -->

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                app:chipCornerRadius="@dimen/d10"
                android:id="@+id/chip1"
                android:text="@string/function_feed_back" />

            <com.google.android.material.chip.Chip
                app:chipCornerRadius="@dimen/d10"
                style="@style/ChipStyle"
                android:id="@+id/chip2"
                android:text="@string/ui" />

            <com.google.android.material.chip.Chip
                app:chipCornerRadius="@dimen/d10"
                style="@style/ChipStyle"
                android:id="@+id/chip3"
                android:text="@string/performance_issues" />

            <com.google.android.material.chip.Chip
                app:chipCornerRadius="@dimen/d10"
                style="@style/ChipStyle"
                android:id="@+id/chip4"
                android:text="@string/safe" />

            <com.google.android.material.chip.Chip
                app:chipCornerRadius="@dimen/d10"
                style="@style/ChipStyle"
                android:id="@+id/chip5"
                android:text="@string/experience" />

            <com.google.android.material.chip.Chip
                app:chipCornerRadius="@dimen/d10"
                style="@style/ChipStyle"
                android:id="@+id/chip6"
                android:text="@string/advice" />

            <com.google.android.material.chip.Chip
                app:chipCornerRadius="@dimen/d10"
                style="@style/ChipStyle"
                android:id="@+id/chip7"
                android:text="@string/other" />

        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_marginTop="@dimen/d10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:background="@drawable/application_bug_view_background"
                android:layout_width="3dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="@dimen/dialog_margin"
                android:text="@string/detail_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/application_bug_edit_background"
            android:layout_marginTop="@dimen/dialog_margin"
            android:layout_width="match_parent"
            android:padding="@dimen/dialog_padding"
            android:layout_height="235dp">
            <EditText
                android:id="@+id/edit"
                android:layout_marginBottom="@dimen/dialog_margin"
                android:textColorHint="@color/change_phone_gray"
                android:hint="@string/hint_content"
                android:maxLength="200"
                android:textSize="15sp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="15sp"
                android:id="@+id/limit"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/limit_application_edit"
                android:textColor="@color/meSettingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textCount"
                android:textSize="15sp"
                android:textColor="@color/meSettingValue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/limit"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <Button
            android:id="@+id/commit"
            android:text="@string/commit"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>
</LinearLayout>