<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".component.login.LoginActivity">
    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/loginText"
        android:text="@string/welcome_login"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/login_for_phone" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/d50"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/d10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/login_for_password" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/d50"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_marginTop="@dimen/d27_5"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"/>
    </LinearLayout>


</RelativeLayout>