<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".component.home.CultureFragment">

        <LinearLayout
            android:background="@color/plant_item_foreground"
            android:orientation="vertical"
            android:padding="@dimen/content_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/plant_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dialog_margin"
                android:text="@string/plant_culture_content"
                android:textSize="15sp"
                android:id="@+id/plantCulture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/content_padding"
            android:background="@color/plant_item_foreground"
            android:layout_marginTop="@dimen/baike_linearlayout_margin"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dialog_margin"
                android:text="@string/legend_content"
                android:textSize="15sp"
                android:id="@+id/legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>