<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".component.home.BaikeFragment">

        <LinearLayout
            android:background="@color/plant_item_foreground"
            android:padding="@dimen/content_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/plantName"
                android:text="紫罗兰"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/plant_english_name_text_color"
                android:layout_marginTop="5dp"
                android:text="Violet"
                android:textSize="15sp"
                android:id="@+id/englishName"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/dialog_margin"
                android:id="@+id/imageRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/in_short"
                android:layout_marginTop="@dimen/dialog_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="@dimen/dialog_margin"
                android:text="@string/introduction"
                android:id="@+id/introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>



        <LinearLayout
            android:padding="@dimen/content_padding"
            android:layout_marginTop="@dimen/baike_linearlayout_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/plant_item_foreground"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/care_knowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/care_knowledge_content"
                android:id="@+id/careKnowledge"
                android:layout_marginTop="@dimen/dialog_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/content_padding"
            android:background="@color/plant_item_foreground"
            android:layout_marginTop="@dimen/baike_linearlayout_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/area_content"
                android:id="@+id/area"
                android:layout_marginTop="@dimen/dialog_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>